# scirun4plus

./: .gitignore  README.md  build.sh  cleaver2plus.sh  dev.sh  fetch_build_cleaver.sh  go_mesh.sh
src/: BIOMESH3D-RELEASE-NOTES  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  LICENSE  RELEASE-NOTES  scirunrc
src/Applications/FEMesher/: CMakeLists.txt  M3DGLCanvas.py  Mesher3D.py  README  SurfsToTets.py  ViewerFrame.py  controls.py  events.py  model_config_example.py  segnrrd.py  tetmesh.glade  wxMesher
src/Applications/SCIRun/: CMakeLists.txt  SCIRun-icon.icns  main.cc  sciabout.ppm  scirun.rc  scisplash.ppm
src/Applications/Seg3D/: ArithmeticTool.cc  ArithmeticTool.h  AutoviewTool.cc  AutoviewTool.h  BrushFloodFill.cc  BrushFloodFill.h  BrushTool.cc  BrushTool.h  CLUTLevelsTool.cc  CLUTLevelsTool.h  CMakeLists.txt  CTestConfig.cmake  CropTool.cc  CropTool.h  FloodFillCopyTool.cc  FloodFillCopyTool.h  FloodfillTool.cc  FloodfillTool.h  ITKBinaryDilateErodeImageFilterTool.cc  ITKBinaryDilateErodeImageFilterTool.h  ITKCannyEdgeDetectionImageFilterTool.cc  ITKCannyEdgeDetectionImageFilterTool.h  ITKConfidenceConnectedImageFilterTool.cc  ITKConfidenceConnectedImageFilterTool.h  ITKCurvatureAnisotropicDiffusionImageFilterTool.cc  ITKCurvatureAnisotropicDiffusionImageFilterTool.h  ITKDiscreteGaussianImageFilterTool.cc  ITKDiscreteGaussianImageFilterTool.h  ITKGradientMagnitudeImageFilterTool.cc  ITKGradientMagnitudeImageFilterTool.h  ITKHoleFillImageFilterTool.cc  ITKHoleFillImageFilterTool.h  ITKNeighborhoodConnectedImageFilterTool.cc  ITKNeighborhoodConnectedImageFilterTool.h  ITKOtsuImageFilterTool.cc  ITKOtsuImageFilterTool.h  ITKSpeedToPathGradientDescentImageFilterTool.cc  ITKSpeedToPathGradientDescentImageFilterTool.h  ITKSpeedToPathIterateNeighborhoodImageFilterTool.cc  ITKSpeedToPathIterateNeighborhoodImageFilterTool.h  (+71 more)
src/Applications/Utils/: AddTri.cc  ApplyMappingMatrix.cc  BuildMappingMatrix.cc  CMakeLists.txt  CoilModelCalibration.cc  ColorMapToText.cc  ColumnMatrixToText.cc  ComputeTightenedLabels.cc  ConvertFieldToNrrd.cc  ConvertNrrdToField.cc  DenseMatrixToText.cc  EGItoMat.cc  ExtractIsosurface.cc  FieldBin1Test.cc  FieldTextToBin.cc  FieldToPtcl.cc  GenerateMPMData.cc  GenerateMedialAxisPoints.cc  InterfaceWithTetGen.cc  JitterPointCloud.cc  JoinFields.cc  LabelTets.cc  MA2PointCloudVectors.cc  MapFieldDataFromSourceToDestination.cc  MtoTriSurfField.cc  ObjToField.cc  OrientFaces.cc  PCA-example.cc  PictToNrrd.cc  PtclToField.cc  RemoveConnectedFaces.cc  RemoveFaces.cc  RemoveOrphanNodes.cc  SeedIntersections.cc  ShowNiftiHeader.cc  SparseRowMatrixToText.cc  TetgenToTetVol.cc  TextToColorMap.cc  TextToColumnMatrix.cc  TextToCurve.cc  (+16 more)
src/CMake/: FindIncrediBuild.cmake  FindInnoSetup.cmake  FindOpenGL.cmake  FindTeem.cmake  SCIRunTestExtAlgorithm.cc  SCIRunTestHashMap.cc  SCIRunTestHashMapEXT.cc  SCIRunTestHashMapGNU.cc  SCIRunTestHashMapSTD.cc  SCIRunTestHashMapSTDEXT.cc  SCIRunTestUnorderedSet.cc  testSemaphore.cc
src/Core/: CMakeLists.txt
src/Core/Algorithms/: CMakeLists.txt
src/Core/Basis/: Basis.h  CMakeLists.txt  TetSamplingSchemes.h  TriCubicHmt.cc
src/Core/Containers/: AVLTree.h  BinaryTree.h  CMakeLists.txt  Handle.h  LockingHandle.h  Octree.h  OffsetArray1.h  RangeTree.h
src/Core/Datatypes/: BlockMatrix.cc  BlockMatrix.h  CMakeLists.txt  ColumnMatrixFunctions.h  DenseColMajMatrixMultiplication.h  DenseMatrixFunctions.cc  DenseMatrixMultiplication.h  HexVolMesh.h  MatrixAlgorithms.cc  MatrixAlgorithms.h  MatrixTypeConverter.cc  MatrixTypeConverter.h  PrismVolMesh.h  SparseMatrixFunctions.cc  SparseMatrixFunctions.h  SparseRowMatrix.h  SparseRowMatrixFromMap.cc  SparseRowMatrixFromMap.h  SparseRowMatrixMultiplication.h  TetVolMesh.h  TriSurfMesh.h
src/Core/Events/: BaseEvent.cc  BaseEvent.h  BaseTool.cc  BaseTool.h  CMakeLists.txt  ColorMap2Event.h  CursorChangeEvent.cc  CursorChangeEvent.h  DataManager.cc  DataManager.h  EventManager.cc  EventManager.h  EventSpawner.h  LoadVolumeEvent.h  MatrixEvent.h  OSXEventSpawner.cc  OSXEventSpawner.h  OpenGLBase.cc  OpenGLBase.h  ToolManager.cc  (+9 more)
src/Dataflow/: CMakeLists.txt
src/Documentation/: BasicTutorial.tex  BioMesh3DGuide.tex  CMakeLists.txt  DefibrillationTutorial.tex  DeveloperGuide.tex  ECGToolkitGuide.tex  ElectricalBrainStimulationTutorial.tex  InstallationGuide.tex  IschemiaModelTutorial.tex  UserGuide.tex  biomesh.sty.in
src/InstallUtils/: BioMesh3D.sh  BioTensor.sh  CMakeLists.txt  README  README-OSX-BIOMESH3D.txt  README-SCIRUNDATA.txt  buildApp.sh.in  buildSeg3D.sh.in  startup.sh
src/Subnets/: ConstantBasisSamplePlane.net  ShowBoundary.net  ShowElectrodes.net  ShowStreamlines.net
src/Testing/: CMakeLists.txt  TestRegressionImages.cc  TestRegressionImagesTeem.cc
src/include/: sci_comp_warn_fixes.h  sci_deprecated.h  sci_gl.h  sci_glx.h  sci_hash_map.h  sci_hash_set.h  sci_values.h  wxchar_fix.h
src/nets/: #AutoTune.srn#  #BiotSavart.srn#  #BiotSavart2.srn#  #BiotSavart3.srn#  #BiotSavart4.srn#  #BiotSavartAndFEM.srn#  #BiotSavartDipoles.srn#  #FixSurfaceNormals.srn#  #MeshROI.srn#  #MeshROIline.srn#  #MeshROIpoint.srn#  #MeshROIpoint_surf.srn#  AutoTune.srn  AutoTune.srn.bak  BiotSavart.srn  BiotSavart.srn.bak  BiotSavart2.srn  BiotSavart2.srn.bak  BiotSavart3.srn  BiotSavart3.srn.bak  BiotSavart4.srn  BiotSavart4.srn.bak  BiotSavart5.srn  BiotSavart5.srn.bak  BiotSavart6.srn  BiotSavartAndFEM.srn  BiotSavartAndFEM.srn.bak  BiotSavartDipoles.srn  BiotSavartDipoles.srn.bak  FixSurfaceNormals.srn  FixSurfaceNormals.srn.bak  MeshROI.srn  MeshROI.srn.bak  MeshROIline.srn  MeshROIline.srn.bak  MeshROIpoint.srn  MeshROIpoint.srn.bak  MeshROIpoint_surf.srn  MeshROIpoint_surf.srn.bak  default.settings
src/scripts/: AlgoInfo.py  BioFEM  BioImage  BioTensor  WinBuild.py  commit.py  connected.pl  field_dispatch_macro.py  fix_externals.py  header_comment.h  makegraph  mesh_dispatch_macro.py  module-remapping.txt  remap_modules_in_net.py  remap_modules_in_srn.py  remove_description.py  repair.sh  run_all_tests.sh  run_sample_tests.sh  run_unit_tests.sh  sub_to_cmake.py  topleaks
(+1863 files in other folders)
